# vulkan_app

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  notes.txt
libs/local/gouda_engine/: CMakeLists.txt  LICENSE  TODO.txt
libs/local/gouda_engine/include/audio/: audio_common.hpp  audio_manager.hpp  music_track.hpp  sound_effect.hpp
libs/local/gouda_engine/include/backends/: common.hpp  event_types.hpp  input_backend.hpp  input_handler.hpp  keycodes.hpp  mouse_codes.hpp  window.hpp
libs/local/gouda_engine/include/backends/glfw/: glfw_backend.hpp  glfw_window.hpp
libs/local/gouda_engine/include/cameras/: camera.hpp  orthographic_camera.hpp  perspective_camera.hpp
libs/local/gouda_engine/include/containers/: small_vector.hpp
libs/local/gouda_engine/include/core/: types.hpp
libs/local/gouda_engine/include/debug/: assert.hpp  debug.hpp  logger.hpp  stacktrace.hpp
libs/local/gouda_engine/include/math/: collision.hpp  easing.hpp  math.hpp  matrix4x4.hpp  simd.hpp  vector.hpp
libs/local/gouda_engine/include/memory/allocators/: arena_allocator_wrapper.hpp  default_allocator.hpp  linear_allocator_wrapper.hpp
libs/local/gouda_engine/include/renderers/: common.hpp  render_data.hpp  text.hpp
libs/local/gouda_engine/include/renderers/vulkan/: gouda_vk_wrapper.hpp  vk_buffer.hpp  vk_buffer_manager.hpp  vk_command_buffer_manager.hpp  vk_compute_pipeline.hpp  vk_depth_resources.hpp  vk_device.hpp  vk_fence.hpp  vk_font_manager.hpp  vk_graphics_pipeline.hpp  vk_instance.hpp  vk_queue.hpp  vk_renderer.hpp  vk_semaphore.hpp  vk_shader.hpp  vk_swapchain.hpp  vk_texture.hpp  vk_texture_manager.hpp  vk_utils.hpp
libs/local/gouda_engine/include/utils/: defer.hpp  filesystem.hpp  image.hpp
libs/local/gouda_engine/src/audio/: audio_common.cpp  audio_manager.cpp  music_track.cpp  sound_effect.cpp
libs/local/gouda_engine/src/backends/: common.cpp  input_handler.cpp
libs/local/gouda_engine/src/backends/glfw/: glfw_backend.cpp  glfw_window.cpp
libs/local/gouda_engine/src/cameras/: camera.cpp  orthographic_camera.cpp  perspective_camera.cpp
libs/local/gouda_engine/src/debug/: assert.cpp  profiler.cpp  stacktrace.cpp
libs/local/gouda_engine/src/math/: transform.cpp  vector.cpp
libs/local/gouda_engine/src/renderers/: render_data.cpp  text.cpp
libs/local/gouda_engine/src/renderers/vulkan/: gouda_vk_wrapper.cpp  vk_buffer.cpp  vk_buffer_manager.cpp  vk_command_buffer_manager.cpp  vk_compute_pipeline.cpp  vk_depth_resources.cpp  vk_device.cpp  vk_fence.cpp  vk_font_manager.cpp  vk_graphics_pipeline.cpp  vk_instance.cpp  vk_queue.cpp  vk_renderer.cpp  vk_semaphore.cpp  vk_shader.cpp  vk_swapchain.cpp  vk_texture.cpp  vk_texture_manager.cpp  vk_utils.cpp
libs/local/gouda_engine/src/utils/: filesystem.cpp  image.cpp
libs/local/gouda_logger/: CMakeLists.txt
libs/local/gouda_logger/include/: logger.hpp  stacktrace.hpp
libs/local/gouda_vulkan/: CMakeLists.txt  TODO.md
libs/local/gouda_vulkan/include/: gouda_throw.hpp  gouda_types.hpp  gouda_utils.hpp  gouda_vk_allocated_buffer.hpp  gouda_vk_buffer.hpp  gouda_vk_buffer_manager.hpp  gouda_vk_core.hpp  gouda_vk_device.hpp  gouda_vk_glfw.hpp  gouda_vk_graphics_pipeline.hpp  gouda_vk_instance.hpp  gouda_vk_queue.hpp  gouda_vk_shader.hpp  gouda_vk_simple_mesh.hpp  gouda_vk_texture.hpp  gouda_vk_utils.hpp  gouda_vk_wrapper.hpp  window.hpp
libs/local/gouda_vulkan/include/audio/: audio_common.hpp  audio_manager.hpp  music_track.hpp  sound_effect.hpp
libs/local/gouda_vulkan/include/backends/: common.hpp  glfw_callbacks.hpp  glfw_window.hpp  input_handler.hpp  keycodes.hpp  mouse_codes.hpp  window.hpp
libs/local/gouda_vulkan/include/backends/glfw/: callbacks.hpp  events.hpp  glfw_window.hpp  keycodes.hpp  window.hpp
libs/local/gouda_vulkan/include/cameras/: camera.hpp  orthographic_camera.hpp  perspective_camera.hpp
libs/local/gouda_vulkan/include/core/: input_event.hpp  input_system.hpp  types.hpp
libs/local/gouda_vulkan/include/debug/: assert.hpp  debug.hpp  logger.hpp  profiler.hpp
libs/local/gouda_vulkan/include/math/: math.hpp  matrix4x4.hpp  quaternion.hpp  random.hpp  simd.hpp  temp.hpp  transform.hpp  vector.hpp
libs/local/gouda_vulkan/include/memory/: memory_tracker.hpp
libs/local/gouda_vulkan/include/memory/allocators/: arena_allocator.hpp  arena_allocator_wrapper.hpp  linear_allocator.hpp  pool_allocator.hpp  pool_allocator_wrapper.hpp
libs/local/gouda_vulkan/include/renderers/vulkan/: gouda_vk_wrapper.hpp  vk_buffer.hpp  vk_buffer_manager.hpp  vk_command_buffer_manager.hpp  vk_depth_resources.hpp  vk_device.hpp  vk_graphics_pipeline.hpp  vk_instance.hpp  vk_mesh.hpp  vk_queue.hpp  vk_renderer.hpp  vk_shader.hpp  vk_shader_manager.hpp  vk_swapchain.hpp  vk_texture.hpp  vk_uniform_data.hpp  vk_utils.hpp
libs/local/gouda_vulkan/include/utility/: filesystem.hpp  image.hpp  image.hpp.bak  math.hpp  random.hpp  timer.hpp
libs/local/gouda_vulkan/include/utils/: filesystem.hpp  image.hpp  timer.hpp
libs/local/gouda_vulkan/libs/local/gouda_image/: CMakeLists.txt
libs/local/gouda_vulkan/src/: gouda_assert.cpp  gouda_utils.cpp  gouda_vk_allocated_buffer.cpp  gouda_vk_buffer.cpp  gouda_vk_buffer_manager.cpp  gouda_vk_core.cpp  gouda_vk_device.cpp  gouda_vk_glfw.cpp  gouda_vk_graphics_pipeline.cpp  gouda_vk_instance.cpp  gouda_vk_queue.cpp  gouda_vk_shader.cpp  gouda_vk_simple_mesh.cpp  gouda_vk_texture.cpp  gouda_vk_utils.cpp  gouda_vk_wrapper.cpp  vk_buffer_manager.cpp
libs/local/gouda_vulkan/src/audio/: audio_common.cpp  audio_manager.cpp  music_track.cpp  sound_effect.cpp
libs/local/gouda_vulkan/src/backends/: common.cpp  glfw_window.cpp  input_handler.cpp
libs/local/gouda_vulkan/src/backends/glfw/: glfw_backend.cpp  (+2 more)
libs/local/gouda_vulkan/src/cameras/: camera.cpp  orthographic_camera.cpp  perspective_camera.cpp
libs/local/gouda_vulkan/src/debug/: assert.cpp
libs/local/gouda_vulkan/src/math/: matrix4x4.cpp  quaternion.cpp  random.cpp
libs/local/gouda_vulkan/src/utility/: filesystem.cpp  random.cpp
libs/local/gouda_vulkan/src/utils/: filesystem.cpp  image.cpp
(+83 files in other folders)
